--- a/includes/node.html
+++ b/includes/node.html
@@ -1,1 +1,5 @@
-<h1>{{nodetitle}}</h1>
+<h1 class="node-title title">{{nodetitle}}</h1>
+
+<div class="content" ng-bind-html-unsafe="body">
+  {{body}}
+</div>
