The CSS styles broke during merge. Had to correct the classes.

--- a/css/custom-style.less
+++ b/css/custom-style.less
@@ -36,6 +36,14 @@ body {
     .box-shadow;
     background-color: @blue-background;
     margin-bottom: 0.5em;
-    padding: 10px;
+    .node-wrap {
+      padding: 0.5em;
+    }
+    .meta-container {
+      background: white;
+      border-bottom-left-radius: 0.6em 0.6em;
+      border-bottom-right-radius: 0.6em 0.6em;
+      padding: 0.5em;
+    }
   }
 }
