Profile picture issue fixed.

--- a/includes/directives/node_teaser.html
+++ b/includes/directives/node_teaser.html
@@ -9,5 +9,5 @@
 
 <div class="meta-container clearfix">
   <div class="time">By {{ node.name }}</div> 
-  <div class="profile_pic"><img src="../images/profile_pic.jpg" alt="#" width="72" height="72" /></div>
+  <div class="profile_pic"><img src="images/profile_pic.jpg" alt="#" width="72" height="72" /></div>
 </div>
