Working on the layout

--- a/includes/directives/node_teaser.html
+++ b/includes/directives/node_teaser.html
@@ -8,6 +8,6 @@
 </div>
 
 <div class="meta-container clearfix">
-  <div class="time">By {{ node.name }}</div> 
-  <div class="profile_pic"><img src="images/profile_pic.jpg" alt="#" width="72" height="72" /></div>
+  <div class="time">By <span>{{ node.name }}</span></div> 
+  <div class="profile_pic"><img src="images/profile_pic.jpg" alt="#" width="30" height="30" /></div>
 </div>
