--- a/css/custom-style.less
+++ b/css/custom-style.less
@@ -1,5 +1,6 @@
 @body-background: #e5e5e5;
 @blue-background: #EFF4F7;
+@link-color: #2a6496;
 
 .rounded-corners (@radius: 0) {
   -webkit-border-radius: @radius;
@@ -28,11 +29,12 @@ body {
       padding: 0;
       margin: 0;
     }
-    h1.node-title {
-      font-size: 1.4em;
+    h1.title {
+      font-size: 1.6em;
       margin-bottom: 0.5em;
+      font-weight: bold;
     }
-    .rounded-corners (@radius: 0.6em);
+    .rounded-corners (@radius: 0.3em);
     .box-shadow;
     background-color: @blue-background;
     margin-bottom: 0.5em;
@@ -44,6 +46,17 @@ body {
       border-bottom-left-radius: 0.6em 0.6em;
       border-bottom-right-radius: 0.6em 0.6em;
       padding: 0.5em;
+      .time {
+        margin-top: 0.2em;
+        float: left;
+        span {
+          color: @link-color;
+          text-transform: capitalize;
+        }
+      }
+      .profile_pic {
+        float: right;
+      }
     }
   }
 }
