--- a/includes/directives/node_teaser.html
+++ b/includes/directives/node_teaser.html
@@ -3,7 +3,7 @@
     <h1 class="title">{{ node.title }}</h1>
   </div>
   <div class="teaser">
-    <p ng-bind-html-unsafe="node.body.und[0].safe_summary"></p>
+    <p ng-bind-html-unsafe="node.body"></p>
   </div>
 </div>
 
