--- a/includes/directives/node_full.html
+++ b/includes/directives/node_full.html
@@ -13,7 +13,7 @@
     <commentsfull comment="comment"></commentsfull>
   </div>
 
-  <commentform></commentform>
+  <commentform nodeid="{{nid}}"></commentform>
 
 </div>
 
