--- a/includes/directives/commentsfull.html
+++ b/includes/directives/commentsfull.html
@@ -1,6 +1,4 @@
 <div class="comment-inner">
-  <div class="meta-data">
-    Submitted by <span>{{comment.name}}</span>
-  </div>
+  <div class="meta-data">Submitted by <span>{{comment.name}}</span></div>
   <div class="content">{{comment.comment_body.und[0].safe_value}}</div>
 </div>
