Changed in the theme of the home page, individual node page and also the comment section.
The layout is also changed to fluid.

--- a/includes/directives/node_full.html
+++ b/includes/directives/node_full.html
@@ -5,9 +5,9 @@
 </div>
 
 <div class="comment-wrapper" ng-show="commentFlag">
-  <h2 class="comment-title">{{ commentText }}</h2>
+  <!--<h2 class="comment-title">{{ commentText }}</h2>-->
 
-  <span class="comment-count clearfix">{{ commentcount }}</span>
+  <div class="comment-count clearfix">{{ commentcount }}</div>
 
   <div class="comments" ng-repeat="comment in comments">
     <commentsfull comment="comment"></commentsfull>
