--- a/includes/nav.html
+++ b/includes/nav.html
@@ -1,7 +1,9 @@
 <div class="col-md-12 col-sm-12">
   <nav class="navbar navbar-default" role="navigation">
+		<div class="icon-plus-navbar-header pull-right">&nbsp;</div>
+		<div class="icon-menu-navbar-header pull-left">&nbsp;</div>
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
+    <!--<div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
@@ -9,7 +11,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="#/home">Angular PG</a>
-    </div>
+    </div>-->
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -19,5 +21,7 @@
         <li><a href="#/login">Login</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
+		
+		
   </nav>
 </div>
